...
      child: new Container(
        margin: const EdgeInsets.symmetric(horizontal: 8.0),
        child: new Column(
          mainAxisSize: MainAxisSize.min,
          children: <Widget>[
            new TextField(
              key: new Key("amountInput"),
              autofocus: true,
              controller: _amountController,
              keyboardType: TextInputType.number,
              decoration: new InputDecoration(hintText: "Amount"),
              onSubmitted: (_) {
                FocusScope.of(context).requestFocus(_categoryFocus);
              },
            ),
            new TextField(
                key: new Key("categoryInput"),
                focusNode: _categoryFocus,
                controller: _categoryController,
                keyboardType: TextInputType.text,
                decoration: new InputDecoration(hintText: "Category"),
                onSubmitted: (_) {
                  submittedCallback();
...
