...
          new Expanded(
            child: new ExpenseList(_expenseManager.getAll()),
          ),
        ],
      ),
      floatingActionButton: new FloatingActionButton(
        key: new Key("addExpenseButton"),
        child: _getFabIcon(),
        onPressed: _fabCallback,
      ),
    );
  }

...
